# vnstock-agent

./: .env.example  README.md  lefthook.yml  pyproject.toml  structure.md  test_hook.txt
src/agent/: __init__.py
src/config/: settings.py
src/llm/providers/: __init__.py  ollama.py
src/utils/logger/: README.md  __init__.py  interface.py  logger.py  logxide_adapter.py
